--- a/react-learn/第二天/react-bookkeeping/package.json
+++ b/react-learn/第二天/react-bookkeeping/package.json
@@ -3,25 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@eonasdan/tempus-dominus": "^6.9.9",
     "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd-mobile": "^5.37.1",
     "axios": "^1.7.3",
+    "bootstrap": "^5.3.3",
+    "bootstrap-datepicker": "^1.10.0",
+    "bootstrap-icons": "^1.11.3",
     "classnames": "^2.5.1",
+    "flatpickr": "^4.6.13",
     "luxon": "^3.4.4",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
+    "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "npm run server & craco start",
     "build": "craco build",
-    "test": "react-scripts test",
+    "test": "craco test",
     "eject": "react-scripts eject",
     "server": "json-server ./server/data.json --port 5834"
   },
@@ -45,6 +52,10 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
-    "json-server": "^1.0.0-beta.1"
+    "css-loader": "^7.1.2",
+    "json-server": "^1.0.0-beta.1",
+    "sass": "^1.77.8",
+    "sass-loader": "^16.0.0",
+    "style-loader": "^4.0.0"
   }
 }
