--- a/react-learn/第三天/react-jike/package.json
+++ b/react-learn/第三天/react-jike/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
+    "echarts": "^5.5.1",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
