--- a/react-learn/第三天/react-jike/package.json
+++ b/react-learn/第三天/react-jike/package.json
@@ -22,13 +22,15 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
+    "source-map-explorer": "^2.5.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "eslintConfig": {
     "extends": [
@@ -49,6 +51,9 @@
     ]
   },
   "devDependencies": {
-    "sass": "^1.77.8"
+    "html-webpack-plugin": "^5.6.0",
+    "sass": "^1.77.8",
+    "webpack-bundle-analyzer": "^4.10.2",
+    "webpack-subresource-integrity": "^5.2.0-rc.1"
   }
 }
