--- a/react-learn/第五天/vite-react-ts-first/package.json
+++ b/react-learn/第五天/vite-react-ts-first/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
+    "react-virtualized": "^9.22.5",
     "react-waypoint": "^10.3.0"
   },
   "devDependencies": {
@@ -23,6 +24,7 @@
     "@types/node": "^22.5.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-virtualized": "^9.21.30",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
