--- a/MyTools/package.json
+++ b/MyTools/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
+    "file-saver": "^2.0.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^22.5.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
