--- a/web3-learn/HardHat/package.json
+++ b/web3-learn/HardHat/package.json
@@ -13,6 +13,7 @@
   "author": "aaa",
   "license": "MIT",
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "hardhat": "^2.22.13"
   }
 }
