--- a/web3-learn/HardHat/package.json
+++ b/web3-learn/HardHat/package.json
@@ -26,12 +26,14 @@
     "@typechain/ethers-v6": "^0.5.0",
     "@typechain/hardhat": "^9.1.0",
     "@types/mocha": "^10.0.9",
+    "@types/node": "^22.7.7",
+    "chai": "^4.2.0",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.4",
     "hardhat": "^2.22.13",
-    "hardhat-deploy": "^0.14.0",
+    "hardhat-deploy": "^0.12.0",
     "hardhat-deploy-ethers": "^0.4.2",
-    "hardhat-gas-reporter": "^2.2.1",
+    "hardhat-gas-reporter": "^1.0.8",
     "solidity-coverage": "^0.8.13",
     "ts-node": "^10.9.2",
     "typechain": "^8.3.0",
