--- a/web3-learn/HardHat/FundMe/package.json
+++ b/web3-learn/HardHat/FundMe/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hardhat_1",
+  "name": "FundMe",
   "version": "1.0.0",
   "description": "begin to learn hardhat",
   "main": "index.js",
