--- a/web3-learn/HardHat/Cross-Chain-NFT/package.json
+++ b/web3-learn/HardHat/Cross-Chain-NFT/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "devDependencies": {
     "@chainlink/contracts": "^1.2.0",
+    "@chainlink/contracts-ccip": "^1.5.0",
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
     "@nomicfoundation/hardhat-ethers": "^3.0.0",
     "@nomicfoundation/hardhat-ignition": "^0.15.0",
@@ -14,11 +15,16 @@
     "@nomicfoundation/hardhat-verify": "^2.0.0",
     "@typechain/ethers-v6": "^0.5.0",
     "@typechain/hardhat": "^9.0.0",
+    "@types/chai": "^5.0.0",
+    "@types/mocha": "^10.0.9",
+    "@types/node": "^22.7.7",
     "chai": "^4.2.0",
     "ethers": "^6.4.0",
     "hardhat": "^2.22.13",
     "hardhat-gas-reporter": "^1.0.8",
     "solidity-coverage": "^0.8.0",
-    "typechain": "^8.3.0"
+    "ts-node": "^10.9.2",
+    "typechain": "^8.3.0",
+    "typescript": "^5.6.3"
   }
 }
